added info-icon.png and edit-button.png
added element to preference.html

--- a/preference.html
+++ b/preference.html
@@ -7,6 +7,58 @@
     <link rel="stylesheet" href="./css/universal.css">
   </head>
   <body>
-
+	<div class = "nav">
+	  <div class = "title">Setting</div>
+	</div>
+	
+	<div class="box-container">
+	  <div>
+	    <span>THEME</span>
+	  </div>
+	  <div>
+		<div id = "checkbox"></div><span>Dark</span>
+		<div id = "checkbox"></div><span>Light</span>
+	  </div>
+	</div>
+	
+	
+	<div class="box-container">
+	  <div>
+	    <span>NAME</span>
+	  </div>
+	  <div>
+		<div>
+		  <span>Jun Jeong</span>
+	   </div>
+	  </div>
+	  </div>
+	
+	 <div class="box-container">
+	   <div>
+	    <span>EMAIL</span>
+	  </div>
+	  <div>
+		<div>
+		  <span>junjeongemail@gmail.com</span>	  
+	    </div>
+	  </div>
+	   </div>
+	  
+	  <div class="box-container">
+	   <div>
+	    <span>JOINED GROUP</span>
+	  </div>
+	  <div>
+		<div>
+		  <div class = "group"><span class = "groups">BCIT CST SET B</span><span class = "exit_gorup">exit Group</span></div>	
+		  <div class = "group"><span class = "groups">BCIT CST SET C</span><span class = "exit_gorup">exit Group</span></div>	
+		  <div class = "group"><span class = "groups">SFU Finance Club</span><span class = "exit_gorup">exit Group</span></div>			  
+	      </div>
+	    </div>
+	  </div>
+	  
+	  <div class="box-container">SAVE</div><div class="box-container">CANCEL</div>
+	  
+	  
   </body>
 </html>
