modified top nav bar added exit button to folder

--- a/preference.html
+++ b/preference.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>TASK APP</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" href="./css/universal.css">
-  </head>
-  <body>
-	<div class = "nav">
-	  <div class = "title">Setting</div>
+
+<head>
+	<title>TASK APP</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="./css/universal.css">
+</head>
+
+<body>
+	<div class="nav">
+		<h1 class="title">SETTINGS</h1>
 	</div>
-	
+
 	<div class="box-container">
-	  <div>
-	    <span>THEME</span>
-	  </div>
-	  <div>
-		<div id = "checkbox"></div><span>Dark</span>
-		<div id = "checkbox"></div><span>Light</span>
-	  </div>
+		<div>
+			<span>THEME</span>
+		</div>
+		<div>
+			<div id="checkbox"></div><span>Dark</span>
+			<div id="checkbox"></div><span>Light</span>
+		</div>
 	</div>
-	
-	
+
+
 	<div class="box-container">
-	  <div>
-	    <span>NAME</span>
-	  </div>
-	  <div>
 		<div>
-		  <span>Jun Jeong</span>
-	   </div>
-	  </div>
-	  </div>
-	
-	 <div class="box-container">
-	   <div>
-	    <span>EMAIL</span>
-	  </div>
-	  <div>
+			<span>NAME</span>
+		</div>
 		<div>
-		  <span>junjeongemail@gmail.com</span>	  
-	    </div>
-	  </div>
-	   </div>
-	  
-	  <div class="box-container">
-	   <div>
-	    <span>JOINED GROUP</span>
-	  </div>
-	  <div>
+			<div>
+				<span>Jun Jeong</span>
+			</div>
+		</div>
+	</div>
+
+	<div class="box-container">
 		<div>
-		  <div class = "group"><span class = "groups">BCIT CST SET B</span><span class = "exit_gorup">exit Group</span></div>	
-		  <div class = "group"><span class = "groups">BCIT CST SET C</span><span class = "exit_gorup">exit Group</span></div>	
-		  <div class = "group"><span class = "groups">SFU Finance Club</span><span class = "exit_gorup">exit Group</span></div>			  
-	      </div>
-	    </div>
-	  </div>
-	  
-	  <div class="box-container">SAVE</div><div class="box-container">CANCEL</div>
-	  
-	  
-  </body>
+			<span>EMAIL</span>
+		</div>
+		<div>
+			<div>
+				<span>junjeongemail@gmail.com</span>
+			</div>
+		</div>
+	</div>
+
+	<div class="box-container">
+		<div>
+			<span>JOINED GROUP</span>
+		</div>
+		<div>
+			<div>
+				<div class="group"><span class="groups">BCIT CST SET B</span><span class="exit_gorup">exit Group</span></div>
+				<div class="group"><span class="groups">BCIT CST SET C</span><span class="exit_gorup">exit Group</span></div>
+				<div class="group"><span class="groups">SFU Finance Club</span><span class="exit_gorup">exit Group</span></div>
+			</div>
+		</div>
+	</div>
+
+	<div class="box-container">SAVE</div>
+	<div class="box-container">CANCEL</div>
+
+
+</body>
+
 </html>
