Task list HTML/CSS Added down-arrow icon to folder

--- a/preference.html
+++ b/preference.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="nav">
-		<h1 class="title">SETTINGS</h1>
+		<h1 class="title title--nav">SETTINGS</h1>
 	</div>
 
 	<div class="box-container">
