--- a/task-list.html
+++ b/task-list.html
@@ -10,5 +10,17 @@
     <div class="nav nav--task-top">
       <h1 class="title title--nav">HI</h1>
     </div>
+
+    <div class="container container-task">
+      <div class="box-container box-container--task">
+        <h1 class="title title--task">Biz Discussion</h1>
+        <p class="content content--task">Every 2 week!</p>
+        <div class="box-bottom">
+          <p class="content content--number-of-people" ><span id="in-progress-people">3</span> in progress</p>
+          <p class="content content--number-of-people"><span id="done-people">20</span> done</p>
+          <p id="due-date" class="content content--due-date">OCT 12</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
