--- a/task-list.html
+++ b/task-list.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>TASK APP</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" href="./css/universal.css">
-  </head>
-  <body>
-    <div class="nav nav--task-top">
-      <h1 class="title title--nav">HI</h1>
-    </div>
 
-    <div class="container container-task">
-      <div class="box-container box-container--task">
-        <h1 class="title title--task">Biz Discussion</h1>
-        <p class="content content--task">Every 2 week!</p>
-        <div class="box-bottom">
-          <p class="content content--number-of-people" ><span id="in-progress-people">3</span> in progress</p>
-          <p class="content content--number-of-people"><span id="done-people">20</span> done</p>
-          <p id="due-date" class="content content--due-date">OCT 12</p>
-        </div>
+<head>
+  <title>TASK APP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="./css/universal.css">
+</head>
+
+<body>
+  <div class="nav nav--task-top">
+    <h1 class="title title--nav">HI</h1>
+  </div>
+
+  <div class="container container-task">
+    <div class="box-container box-container--task">
+      <h1 class="title title--task">Biz Discussion</h1>
+      <p class="content content--task">Every 2 week!</p>
+      <div class="checkbox checkbox-not-checked"></div>
+      <div class="box-bottom">
+        <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+        <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+        <p id="due-date" class="content content--due-date">OCT 12</p>
       </div>
     </div>
-  </body>
+  </div>
+
+  <div class="container container-task">
+    <div class="box-container box-container--task">
+      <h1 class="title title--task">1113 Chapter 6 Quiz</h1>
+      <p class="content content--task">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec aliquam
+        arcu. Cras consequat ipsum at consequat porta. Cras vel pharetra eros. In hac habitasse platea dictumst. Etiam
+        fermentum sem lorem, ut sagittis quam rutrum ut. Donec mollis hendrerit urna sed convallis. Cras vitae bibendum
+        odio.</p>
+      <div class="checkbox checkbox-not-checked"></div>
+      <div class="box-bottom">
+        <p class="content content--number-of-people"><span id="in-progress-people">15</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+        <p class="content content--number-of-people"><span id="done-people">8</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+        <p id="due-date" class="content content--due-date">OCT 15</p>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
