Started on Landing-page
added element to landing page (not all)

added some css for landing-page.html in universal.css

--- a/landing-page.html
+++ b/landing-page.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>TASK APP</title>
@@ -8,6 +7,31 @@
     <link rel="stylesheet" href="./css/universal.css">
   </head>
   <body>
-
+	<div>
+		<h1 class = "title title--landing-page">Welcome to [App Name]</h1>
+	</div>
+	<div class = "body--landing-page">
+		<p>[App Name] is a collaborative task list app you can...</p>
+	
+		<div>
+		<p> Add/track list of tasks,</p>
+		<div>
+		<div class = "nfinished?--landing-page"><div class="checkbox checkbox-not-checked checkbox--landing-page"></div>Not Finished</div>
+		<div class = "nfinished?--landing-page"><div class="checkbox checkbox-checked checkbox--landing-page"></div><div class = "nfinished?--landing-page">Finished</div>
+		</div>
+		</div>
+	
+		<div>
+		<p>Sort and organize your tasks,</p>
+		<div>
+		</div>
+		</div>
+	
+		<div>
+		<p>And join a group, share task with others!</p>
+		<div>
+		</div>
+		</div>
+	</div>
   </body>
 </html>
