--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="./css/universal.css">
   </head>
   <body>
-
+	<div>
+	</div>
+	
+	<p>App Name is a collaborative task list app you can...</p>
+	
+	<div>
+	<p> Add/track list of tasks,</p>
+	<div>
+	</div>
+	</div>
+	
+	<div>
+	<p>Sort and organize your tasks,</p>
+	<div>
+	</div>
+	</div>
+	
+	<div>
+	<p>And join a group, share task with others!</p>
+	<div>
+	</div>
+	</div>
   </body>
 </html>
