wrapped box-container with container css minor fix

--- a/preference.html
+++ b/preference.html
@@ -2,94 +2,96 @@
 <html lang="en">
 
 <head>
-	<title>TASK APP</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
-	<meta charset="utf-8" />
-	<link rel="stylesheet" href="./css/universal.css">
+  <title>TASK APP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="./css/universal.css">
 </head>
 
 <body>
-	<div class="nav">
-		<h1 class="title title--nav">
-			<span class="setting-button"><img src="./image/setting-icon.png" alt="setting icon" width="30" height="30" /></span>
-			SETTINGS
-			<span class="close-button"><img src="./image/close-button.png" alt="close button width = " 21" height="21" class="close-button-img" /></span>
-		</h1>
-	</div>
+  <div class="nav">
+    <h1 class="title title--nav">
+      <span class="setting-button"><img src="./image/setting-icon.png" alt="setting icon" width="30" height="30" /></span>
+      SETTINGS
+      <span class="close-button"><img src="./image/close-button.png" alt="close button width = " 21" height="21" class="close-button-img" /></span>
+    </h1>
+  </div>
 
-	<div class="box-container">
-		<div class="box-top">
-			<span>THEME</span>
-		</div>
-		<div class="box-container--preference">
-			<div class="theme-option--preference">
-				<span class="checkbox--preference"></span><span class="content--preference">Dark</span>
-			</div>
-			<div class="theme-option--preference">
-				<span class="checkbox--preference"></span><span class="content--preference">Light</span>
-			</div>
-		</div>
-	</div>
-
-
-	<div class="box-container">
-		<div class="box-top">
-			<span>NAME</span>
-			<img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" />
-		</div>
-		<div>
-			<div class="box-container--preference">
-				<span class="content--preference">Jun Jeong</span>
-			</div>
-		</div>
-	</div>
-
-	<div class="box-container ">
-		<div class="box-top">
-			<span>EMAIL</span>
-			<img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" />
-		</div>
-		<div>
-			<div class="box-container--preference">
-				<span class="content--preference">junjeongemail@gmail.com</span>
-			</div>
-		</div>
-	</div>
-
-	<div class="box-container">
-		<div class="box-top">
-			<span>JOINED GROUP</span>
-		</div>
-		<div>
-			<div class="group-box-content--preference">
-				<div class="group--preference">
-					<span class="groups content--preference">BCIT CST SET B</span>
-					<span class="group-option--preference">
-						<span class="exit_gorup--preference">Exit Group</span>
-						<span><img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></span>
-					</span>
-				</div>
-				<div class="group--preference">
-					<span class="groups content--preference">BCIT CST SET C</span>
-					<span class="group-option--preference">
-						<span class="exit_gorup--preference">Exit Group</span>
-						<span><img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></span>
-					</span>
-				</div>
-				<div class="group--preference"><span class="groups content--preference">SFU Finance Club</span>
-					<span class="group-option--preference">
-						<span class="exit_gorup--preference">Exit Group</span>
-						<span><img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></span>
-					</span>
-				</div>
+  <div class="container">
+    <div class="box-container">
+      <div class="box-top">
+        <span>THEME</span>
+      </div>
+      <div class="box-container--preference">
+        <div class="theme-option--preference">
+          <span class="checkbox--preference"></span><span class="content--preference">Dark</span>
+        </div>
+        <div class="theme-option--preference">
+          <span class="checkbox--preference"></span><span class="content--preference">Light</span>
+        </div>
+      </div>
+    </div>
 
 
-			</div>
-		</div>
-	</div>
+    <div class="box-container">
+      <div class="box-top">
+        <span>NAME</span>
+        <img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" />
+      </div>
+      <div>
+        <div class="box-container--preference">
+          <span class="content--preference">Jun Jeong</span>
+        </div>
+      </div>
+    </div>
 
-	<div class="box-container  preference--button">CANCEL</div>
-	<div class="box-container  preference--button">SAVE</div>
+    <div class="box-container ">
+      <div class="box-top">
+        <span>EMAIL</span>
+        <img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" />
+      </div>
+      <div>
+        <div class="box-container--preference">
+          <span class="content--preference">junjeongemail@gmail.com</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="box-container">
+      <div class="box-top">
+        <span>JOINED GROUP</span>
+      </div>
+      <div>
+        <div class="group-box-content--preference">
+          <div class="group--preference">
+            <span class="groups content--preference">BCIT CST SET B</span>
+            <span class="group-option--preference">
+              <span class="exit-group--preference">Exit Group</span>
+              <span><img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></span>
+            </span>
+          </div>
+          <div class="group--preference">
+            <span class="groups content--preference">BCIT CST SET C</span>
+            <span class="group-option--preference">
+              <span class="exit-group--preference">Exit Group</span>
+              <span><img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></span>
+            </span>
+          </div>
+          <div class="group--preference"><span class="groups content--preference">SFU Finance Club</span>
+            <span class="group-option--preference">
+              <span class="exit-group--preference">Exit Group</span>
+              <span><img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></span>
+            </span>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="box-container  preference--button">CANCEL</div>
+  <div class="box-container  preference--button">SAVE</div>
 
 
 
