exit button edited menu pane initial setup

--- a/preference.html
+++ b/preference.html
@@ -13,8 +13,8 @@
     <h1 class="title title--nav">
       <span class="setting-button"><img src="./image/setting-icon.png" alt="setting icon" width="30" height="30" /></span>
       SETTINGS
-      <span class="close-button"><img src="./image/close-button.png" alt="close button width = " 21" height="21" class="close-button-img" /></span>
     </h1>
+    <img src="./image/close-button.png" alt="close button" width = "21" height="21" class="close-button-img" />
   </div>
 
   <div class="container">
