--- a/task-list.html
+++ b/task-list.html
@@ -10,7 +10,24 @@
 
 <body>
   <div class="nav nav--task-top">
+    <div class="button button--menu">MENU</div>
     <h1 class="title title--nav">HI</h1>
+    <img src="./image/setting-icon.png" alt="setting button" class="button setting-button-img-nav" />
+  </div>
+
+  <div class="menu-panel">
+    <h1 class="title title-menu">MENU</h1>
+    <img src="./image/close-button.png" alt="close button" width = "21" height="21" class="close-button-img" />
+    <ul class="menu-list">
+      <li>Find Group</li>
+      <li>Create Group</li>
+      <li>Your Groups</li>
+      <ul class="menu-list-deeper">
+        <li>BCIT CST SET B</li>
+        <li>BCIT CST SET C</li>
+        <li>Dos Tacos</li>
+      </ul>
+    </ul>
   </div>
 
   <div class="container container-task">
@@ -30,7 +47,7 @@
     <div class="box-container box-container--task">
       <div class="checkbox checkbox-checked"></div>
       <div class="task-left-side">
-        <h1 class="title title--task">Biz Discussion</h1>
+        <h1 class="title title--task">1113 Chapter 6 Test!</h1>
         <p class="content content--task">Every week!</p>
       </div>
       <div class="box-bottom">
@@ -39,6 +56,9 @@
         <p id="due-date" class="content content--due-date">OCT 12</p>
       </div>
     </div>
+
+
+
   </div>
 </body>
 
