menu pane align

--- a/task-list.html
+++ b/task-list.html
@@ -22,7 +22,7 @@
       <li>Find Group</li>
       <li>Create Group</li>
       <li>Your Groups</li>
-      <ul class="menu-list-deeper">
+      <ul class="menu-list menu-list-deeper">
         <li>BCIT CST SET B</li>
         <li>BCIT CST SET C</li>
         <li>Dos Tacos</li>
