--- a/task-list.html
+++ b/task-list.html
@@ -19,9 +19,9 @@
     <h1 class="title title-menu">MENU</h1>
     <img src="./image/close-button.png" alt="close button" width = "21" height="21" class="close-button-img" />
     <ul class="menu-list">
-      <li>Find Group</li>
-      <li>Create Group</li>
-      <li>Your Groups</li>
+      <li><img src="./image/search-icon.png" alt="search icon" class="icon--menu-pane">Find Group</li>
+      <li><img src="./image/plus-icon.png" alt="plus icon" class="icon--menu-pane">Create Group</li>
+      <li><img src="./image/list-icon.png" alt="list icon" class="icon--menu-pane">Your Groups</li>
       <ul class="menu-list menu-list-deeper">
         <li>BCIT CST SET B</li>
         <li>BCIT CST SET C</li>
