toggle only functionality

--- a/task-list.html
+++ b/task-list.html
@@ -17,7 +17,7 @@
 
   <div class="menu-panel">
     <h1 class="title title-menu">MENU</h1>
-    <img src="./image/close-button.png" alt="close button" width = "21" height="21" class="close-button-img" />
+    <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--menu" />
     <ul class="menu-list">
       <li><img src="./image/search-icon.png" alt="search icon" class="icon--menu-pane">Find Group</li>
       <li><img src="./image/plus-icon.png" alt="plus icon" class="icon--menu-pane">Create Group</li>
@@ -60,6 +60,9 @@
 
 
   </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="./js/menu-pane.js"></script>
 </body>
 
 </html>
