add task button added

--- a/task-list.html
+++ b/task-list.html
@@ -56,9 +56,10 @@
         <p id="due-date" class="content content--due-date">OCT 12</p>
       </div>
     </div>
+  </div>
 
-
-
+  <div class="button button--add-task">
+    <img src="./image/plus-icon.png" alt="plus icon" class="icon--add-task">
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
