replaced setting button with information button added setting to menu pane

--- a/task-list.html
+++ b/task-list.html
@@ -11,8 +11,8 @@
 <body>
   <div class="nav nav--task-top">
     <div class="button button--menu">MENU</div>
-    <h1 class="title title--nav">HI</h1>
-    <img src="./image/setting-icon.png" alt="setting button" class="button setting-button-img-nav" />
+    <h1 class="title title--nav">HI what if the text is too long?</h1>
+    <img src="./image/information-button.png" alt="information button" class="button information-button-img-nav" />
   </div>
 
   <div class="menu-panel">
@@ -27,6 +27,7 @@
         <li>BCIT CST SET C</li>
         <li>Dos Tacos</li>
       </ul>
+      <li><img src="./image/setting-icon.png" alt="setting icon" class="icon--menu-pane">Settings</li>
     </ul>
   </div>
 
