task group name overflow task box min height setting removed

--- a/task-list.html
+++ b/task-list.html
@@ -11,7 +11,7 @@
 <body>
   <div class="nav nav--task-top">
     <div class="button button--menu">MENU</div>
-    <h1 class="title title--nav">HI what if the text is too long?</h1>
+    <h1 class="title title--nav">Dummy Task Group</h1>
     <img src="./image/information-button.png" alt="information button" class="button information-button-img-nav" />
   </div>
 
@@ -27,7 +27,7 @@
         <li>BCIT CST SET C</li>
         <li>Dos Tacos</li>
       </ul>
-      <li><img src="./image/setting-icon.png" alt="setting icon" class="icon--menu-pane">Settings</li>
+      <li><a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="icon--menu-pane">Settings</a></li>
     </ul>
   </div>
 
@@ -49,7 +49,7 @@
       <div class="checkbox checkbox-checked"></div>
       <div class="task-left-side">
         <h1 class="title title--task">1113 Chapter 6 Test!</h1>
-        <p class="content content--task">Every week!</p>
+        <p class="content content--task"></p>
       </div>
       <div class="box-bottom">
         <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
