task title overflow issue fixed

--- a/task-list.html
+++ b/task-list.html
@@ -48,7 +48,7 @@
     <div class="box-container box-container--task">
       <div class="checkbox checkbox-checked"></div>
       <div class="task-left-side">
-        <h1 class="title title--task">1113 Chapter 6 Test!</h1>
+        <h1 class="title title--task">1113 Chapter 6 Test! What if title is too big? what happens?</h1>
         <p class="content content--task"></p>
       </div>
       <div class="box-bottom">
@@ -57,6 +57,20 @@
         <p id="due-date" class="content content--due-date">OCT 12</p>
       </div>
     </div>
+
+    <div class="box-container box-container--task">
+        <div class="checkbox checkbox-checked"></div>
+        <div class="task-left-side">
+          <h1 class="title title--task">Java Assignment 3</h1>
+          <p class="content content--task"></p>
+        </div>
+        <div class="box-bottom">
+          <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p id="due-date" class="content content--due-date">OCT 12</p>
+        </div>
+      </div>
+
   </div>
 
   <div class="button button--add-task">
