added link to group info page

--- a/task-list.html
+++ b/task-list.html
@@ -12,7 +12,7 @@
   <div class="nav nav--task-top">
     <div class="button button--menu">MENU</div>
     <h1 class="title title--nav">Dummy Task Group</h1>
-    <img src="./image/information-button.png" alt="information button" class="button information-button-img-nav" />
+    <a href="./group-info.html"><img src="./image/information-button.png" alt="information button" class="button information-button-img-nav" /></a>
   </div>
 
   <div class="menu-panel">
