--- a/task-list.html
+++ b/task-list.html
@@ -45,6 +45,35 @@
       </div>
     </div>
 
+    <div class="box-container box-container--people">
+        <div class="box-top">
+          <h1 class="title title--list-done">DONE</h1>
+        </div>
+  
+        <ul class="people-list">
+          <li>Demetra Spahn</li>
+          <li>Vince Mcdowell</li>
+          <li>Sanjuana Levitsky</li>
+          <li>Rachell Edlund</li>
+          <li>Doug Dunnington</li>
+          <li>Delphine Magno</li>
+          <li>Eric Didion</li>
+          <li>Song Grabill</li>
+          <li>Agnus Buentello</li>
+          <li>Estelle Olivarez</li>
+          <li>Major Clubb</li>
+          <li>Genia Bongiovanni</li>
+          <li>Amelia Hawbaker</li>
+          <li>Glory Percival</li>
+          <li>Nanette Mejorado</li>
+          <li>Merideth Dixion</li>
+          <li>Sunny Low</li>
+          <li>Fabian Cahoon</li>
+          <li>Ardelle Leeds</li>
+          <li>Bret Brasfield</li>
+        </ul>
+      </div>
+
     <div class="box-container box-container--task">
       <div class="checkbox checkbox-checked"></div>
       <div class="task-left-side">
@@ -59,17 +88,19 @@
     </div>
 
     <div class="box-container box-container--task">
-        <div class="checkbox checkbox-checked"></div>
-        <div class="task-left-side">
-          <h1 class="title title--task">Java Assignment 3</h1>
-          <p class="content content--task"></p>
-        </div>
-        <div class="box-bottom">
-          <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
-          <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
-          <p id="due-date" class="content content--due-date">OCT 12</p>
-        </div>
+      <div class="checkbox checkbox-checked"></div>
+      <div class="task-left-side">
+        <h1 class="title title--task">Java Assignment 3</h1>
+        <p class="content content--task"></p>
       </div>
+      <div class="box-bottom">
+        <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+        <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+        <p id="due-date" class="content content--due-date">OCT 12</p>
+      </div>
+    </div>
+
+    
 
   </div>
 
