exit button added

--- a/task-list.html
+++ b/task-list.html
@@ -48,6 +48,7 @@
     <div class="box-container box-container--people">
         <div class="box-top">
           <h1 class="title title--list-done">DONE</h1>
+          <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--people" />
         </div>
   
         <ul class="people-list">
