--- a/task-list.html
+++ b/task-list.html
@@ -39,8 +39,8 @@
         <p class="content content--task">Every 2 week!</p>
       </div>
       <div class="box-bottom">
-        <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
-        <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+        <p class="content content--number-of-people content--notdone-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+        <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
         <p id="due-date" class="content content--due-date">OCT 12</p>
       </div>
     </div>
