scroll top by default

--- a/task-list.html
+++ b/task-list.html
@@ -110,6 +110,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="./js/menu-pane.js"></script>
+  <script src="./js/universal.js"></script>
 </body>
 
 </html>
