filter bar added

--- a/preference.html
+++ b/preference.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="nav">
+  <div class="nav nav--task-top">
     <h1 class="title title--nav">
       <span class="setting-button"><img src="./image/setting-icon.png" alt="setting icon" width="30" height="30" /></span>
       SETTINGS
