--- a/task-list.html
+++ b/task-list.html
@@ -15,6 +15,7 @@
     <a href="./group-info.html"><img src="./image/information-button.png" alt="information button" class="button information-button-img-nav" /></a>
   </div>
 
+
   <div class="menu-panel">
     <h1 class="title title-menu">MENU</h1>
     <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--menu" />
@@ -32,6 +33,28 @@
   </div>
 
   <div class="container container-task">
+    <div class="task-filter-sort-bar">
+      <div class="filter filter--task">
+        <h2 class="label label--filter">FILTER</h2>
+        <button class="dropdown dropdown--filter">ALL</button>
+        <ul class="dropdown-content dropdown-content--filter">
+          <li>All</li>
+          <li>In Progress</li>
+          <li>Done</li>
+        </ul>
+      </div>
+
+      <div class="sort sort--task">
+        <h2 class="label label--sort">SORT</h2>
+        <button class="dropdown dropdown-content--sort">DATE</button>
+        <ul class="dropdown-content dropdown-content--sort">
+          <li>Due Date</li>
+          <li>Number of People Done</li>
+          <li>Created Date</li>
+        </ul>
+      </div>
+    </div>
+
     <div class="box-container box-container--task">
       <div class="checkbox checkbox-not-checked"></div>
       <div class="task-left-side">
