--- a/task-list.html
+++ b/task-list.html
@@ -36,8 +36,8 @@
 
     <div class="task-filter-sort-bar box-container">
       <div class="filter filter--task">
-        <h2 class="label label--filter">FILTER</h2>
-        <button class="dropdown dropdown--filter">ALL<i class="dropdown-icon dropdown-icon--task"></i></button>
+        <h2 class="label label--filter">FILTER:</h2>
+        <button class="dropdown dropdown--filter">All<i class="dropdown-icon dropdown-icon--task"></i></button>
         <ul class="dropdown-content dropdown-content--filter">
           <li>All</li>
           <li>In Progress</li>
@@ -46,8 +46,8 @@
       </div>
 
       <div class="sort sort--task">
-        <h2 class="label label--sort">SORT</h2>
-        <button class="dropdown dropdown-content--sort">DATE<i class="dropdown-icon dropdown-icon--task"></i></button>
+        <h2 class="label label--sort">SORT:</h2>
+        <button class="dropdown dropdown-content--sort">Date<i class="dropdown-icon dropdown-icon--task"></i></button>
         <ul class="dropdown-content dropdown-content--sort">
           <li>Due Date</li>
           <li>Number of People Done</li>
