--- a/task-list.html
+++ b/task-list.html
@@ -32,8 +32,7 @@
     </ul>
   </div>
 
-  <div class="container container-task">
-
+  <div class="container">
     <div class="task-filter-sort-bar box-container">
       <div class="filter filter--task">
         <h2 class="label label--filter">FILTER:</h2>
@@ -55,79 +54,82 @@
         </ul>
       </div>
     </div>
+    <div class="container-task">
 
-    <div class="box-container box-container--task">
-      <div class="checkbox checkbox-not-checked"></div>
-      <div class="task-left-side">
-        <h1 class="title title--task">Biz Discussion</h1>
-        <p class="content content--task">Every 2 week!</p>
+      <div class="box-container box-container--task">
+        <div class="checkbox checkbox-not-checked"></div>
+        <div class="task-left-side">
+          <h1 class="title title--task">Biz Discussion</h1>
+          <p class="content content--task">Every 2 week!</p>
+        </div>
+        <div class="box-bottom">
+          <p class="content content--number-of-people content--notdone-people"><span id="in-progress-people">3</span>
+            in
+            progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i
+              class="dropdown-icon dropdown-icon--task"></i></p>
+          <p id="due-date" class="content content--due-date">OCT 12</p>
+        </div>
       </div>
-      <div class="box-bottom">
-        <p class="content content--number-of-people content--notdone-people"><span id="in-progress-people">3</span> in
-          progress<i class="dropdown-icon dropdown-icon--task"></i></p>
-        <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
-        <p id="due-date" class="content content--due-date">OCT 12</p>
+
+      <div class="box-container box-container--people">
+        <div class="box-top">
+          <h1 class="title title--list-done">DONE</h1>
+          <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--people" />
+        </div>
+
+        <ul class="people-list">
+          <li>Demetra Spahn</li>
+          <li>Vince Mcdowell</li>
+          <li>Sanjuana Levitsky</li>
+          <li>Rachell Edlund</li>
+          <li>Doug Dunnington</li>
+          <li>Delphine Magno</li>
+          <li>Eric Didion</li>
+          <li>Song Grabill</li>
+          <li>Agnus Buentello</li>
+          <li>Estelle Olivarez</li>
+          <li>Major Clubb</li>
+          <li>Genia Bongiovanni</li>
+          <li>Amelia Hawbaker</li>
+          <li>Glory Percival</li>
+          <li>Nanette Mejorado</li>
+          <li>Merideth Dixion</li>
+          <li>Sunny Low</li>
+          <li>Fabian Cahoon</li>
+          <li>Ardelle Leeds</li>
+          <li>Bret Brasfield</li>
+        </ul>
       </div>
+
+      <div class="box-container box-container--task">
+        <div class="checkbox checkbox-checked"></div>
+        <div class="task-left-side">
+          <h1 class="title title--task">1113 Chapter 6 Test! What if title is too big? what happens?</h1>
+          <p class="content content--task"></p>
+        </div>
+        <div class="box-bottom">
+          <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p id="due-date" class="content content--due-date">OCT 12</p>
+        </div>
+      </div>
+
+      <div class="box-container box-container--task">
+        <div class="checkbox checkbox-checked"></div>
+        <div class="task-left-side">
+          <h1 class="title title--task">Java Assignment 3</h1>
+          <p class="content content--task"></p>
+        </div>
+        <div class="box-bottom">
+          <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p id="due-date" class="content content--due-date">OCT 12</p>
+        </div>
+      </div>
+
     </div>
-
-    <div class="box-container box-container--people">
-      <div class="box-top">
-        <h1 class="title title--list-done">DONE</h1>
-        <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--people" />
-      </div>
-
-      <ul class="people-list">
-        <li>Demetra Spahn</li>
-        <li>Vince Mcdowell</li>
-        <li>Sanjuana Levitsky</li>
-        <li>Rachell Edlund</li>
-        <li>Doug Dunnington</li>
-        <li>Delphine Magno</li>
-        <li>Eric Didion</li>
-        <li>Song Grabill</li>
-        <li>Agnus Buentello</li>
-        <li>Estelle Olivarez</li>
-        <li>Major Clubb</li>
-        <li>Genia Bongiovanni</li>
-        <li>Amelia Hawbaker</li>
-        <li>Glory Percival</li>
-        <li>Nanette Mejorado</li>
-        <li>Merideth Dixion</li>
-        <li>Sunny Low</li>
-        <li>Fabian Cahoon</li>
-        <li>Ardelle Leeds</li>
-        <li>Bret Brasfield</li>
-      </ul>
-    </div>
-
-    <div class="box-container box-container--task">
-      <div class="checkbox checkbox-checked"></div>
-      <div class="task-left-side">
-        <h1 class="title title--task">1113 Chapter 6 Test! What if title is too big? what happens?</h1>
-        <p class="content content--task"></p>
-      </div>
-      <div class="box-bottom">
-        <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
-        <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
-        <p id="due-date" class="content content--due-date">OCT 12</p>
-      </div>
-    </div>
-
-    <div class="box-container box-container--task">
-      <div class="checkbox checkbox-checked"></div>
-      <div class="task-left-side">
-        <h1 class="title title--task">Java Assignment 3</h1>
-        <p class="content content--task"></p>
-      </div>
-      <div class="box-bottom">
-        <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
-        <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
-        <p id="due-date" class="content content--due-date">OCT 12</p>
-      </div>
-    </div>
-
   </div>
-
   <div class="button button--add-task">
     <img src="./image/plus-icon.png" alt="plus icon" class="icon--add-task">
   </div>
