--- a/task-list.html
+++ b/task-list.html
@@ -54,7 +54,7 @@
         </ul>
       </div>
     </div>
-    <div class="container-task">
+    <div class="container--task">
 
       <div class="box-container box-container--task">
         <div class="checkbox checkbox-not-checked"></div>
@@ -70,36 +70,35 @@
               class="dropdown-icon dropdown-icon--task"></i></p>
           <p id="due-date" class="content content--due-date">OCT 12</p>
         </div>
-      </div>
+        <div class="container--people">
+          <div class="box-top">
+            <h1 class="title title--list-done">DONE</h1>
+            <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--people" />
+          </div>
 
-      <div class="box-container box-container--people">
-        <div class="box-top">
-          <h1 class="title title--list-done">DONE</h1>
-          <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--people" />
+          <ul class="people-list">
+            <li>Demetra Spahn</li>
+            <li>Vince Mcdowell</li>
+            <li>Sanjuana Levitsky</li>
+            <li>Rachell Edlund</li>
+            <li>Doug Dunnington</li>
+            <li>Delphine Magno</li>
+            <li>Eric Didion</li>
+            <li>Song Grabill</li>
+            <li>Agnus Buentello</li>
+            <li>Estelle Olivarez</li>
+            <li>Major Clubb</li>
+            <li>Genia Bongiovanni</li>
+            <li>Amelia Hawbaker</li>
+            <li>Glory Percival</li>
+            <li>Nanette Mejorado</li>
+            <li>Merideth Dixion</li>
+            <li>Sunny Low</li>
+            <li>Fabian Cahoon</li>
+            <li>Ardelle Leeds</li>
+            <li>Bret Brasfield</li>
+          </ul>
         </div>
-
-        <ul class="people-list">
-          <li>Demetra Spahn</li>
-          <li>Vince Mcdowell</li>
-          <li>Sanjuana Levitsky</li>
-          <li>Rachell Edlund</li>
-          <li>Doug Dunnington</li>
-          <li>Delphine Magno</li>
-          <li>Eric Didion</li>
-          <li>Song Grabill</li>
-          <li>Agnus Buentello</li>
-          <li>Estelle Olivarez</li>
-          <li>Major Clubb</li>
-          <li>Genia Bongiovanni</li>
-          <li>Amelia Hawbaker</li>
-          <li>Glory Percival</li>
-          <li>Nanette Mejorado</li>
-          <li>Merideth Dixion</li>
-          <li>Sunny Low</li>
-          <li>Fabian Cahoon</li>
-          <li>Ardelle Leeds</li>
-          <li>Bret Brasfield</li>
-        </ul>
       </div>
 
       <div class="box-container box-container--task">
