--- a/landing-page.html
+++ b/landing-page.html
@@ -9,35 +9,66 @@
 </head>
 
 <body>
-	<div>
-		<h1 class="title title--landing-page">Welcome to [App Name]</h1>
+	<div class = "header--landing-page">
+	  <h1 class="title title--landing-page">Welcome to [App Name]</h1>
 	</div>
 	<div class="body--landing-page">
-		<p>[App Name] is a collaborative task list app you can...</p>
-
-		<div>
-			<p> Add/track list of tasks,</p>
-			<div>
+	  <p>[App Name] is a collaborative task list app you can...</p>
+		
+	  <div class = "section--landing-page">
+		<p> Add/track list of tasks,</p>
+		  <div>
+			<div class="nfinished?--landing-page">
+			  <div class="checkbox checkbox-not-checked checkbox--landing-page"></div>Not Finished
+			</div>
 				<div class="nfinished?--landing-page">
-					<div class="checkbox checkbox-not-checked checkbox--landing-page"></div>Not Finished
-				</div>
-				<div class="nfinished?--landing-page">
-					<div class="checkbox checkbox-checked checkbox--landing-page"></div>
-					<div class="nfinished?--landing-page">Finished</div>
+					<div class="checkbox checkbox-checked checkbox--landing-page"></div>Finished
 				</div>
 			</div>
-
-			<div>
-				<p>Sort and organize your tasks,</p>
-				<div>
-				</div>
 			</div>
 
-			<div>
+			<div class = "section--landing-page">
+			  <p>Sort and organize your tasks,</p>
+			  <div class="task-filter-sort-bar box-container">
+				<div class="filter filter--task filterSort--landing-page">
+				<h2 class="label label--filter">FILTER:</h2>
+				<button class="dropdown dropdown--filter">All<i class="dropdown-icon dropdown-icon--task"></i></button>
+			</div>
+
+				<div class="sort sort--task filterSort--landing-page">
+				<h2 class="label label--sort">SORT:</h2>
+				<button class="dropdown dropdown-content--sort">Date<i class="dropdown-icon dropdown-icon--task"></i></button>
+      </div>
+    </div>
+			</div>
+
+			<div class = "section--landing-page">
 				<p>And join a group, share task with others!</p>
-				<div>
+				<div class = "box-container group-list--landing-page">
+				  <div class="groups--landing-page">
+				    <span class="groups">BCIT CST SET D</span>
+				    <span class="group-option--landing-page">
+				    <span class="join-group--landing-page">Join Group</span>
+				    <span><img src="./image/info-icon.png" alt="info" width="15" height="15" class="info--preference" /></span>
+				    </span>
+				  </div>
+				  <div class="groups--landing-page">
+				    <span class="groups">Healthy Meal Plan!</span>
+				    <span class="group-option--landing-page">
+				    <span class="join-group--landing-page">Join Group</span>
+				    <span><img src="./image/info-icon.png" alt="info" width="15" height="15" class="info--preference" /></span>
+				    </span>
+				  </div>
+				  <div class="groups--landing-page">
+				    <span class="groups">Dos Tacos</span>
+				    <span class="group-option--landing-page">
+				    <span class="join-group--landing-page">Join Group</span>
+				    <span><img src="./image/info-icon.png" alt="info" width="15" height="15" class="info--preference" /></span>
+				    </span>
+				  </div>
 				</div>
 			</div>
+			<div class="box-container landing-page--button">GET STARTED!</div>
 		</div>
 </body>
 
