index page html/css
edited index.html (not responsive yet)

added css for index.html in unviersal.css

linked the close button in preference page to index page

linked the setting button in index page to preference page

--- a/preference.html
+++ b/preference.html
@@ -14,13 +14,13 @@
       <span class="setting-button"><img src="./image/setting-icon.png" alt="setting icon" width="30" height="30" /></span>
       SETTINGS
     </h1>
-    <img src="./image/close-button.png" alt="close button" width = "21" height="21" class="close-button-img" />
+    <a href="./index.html"><img src="./image/close-button.png" alt="close button" width = "21" height="21" class="close-button-img"/></a>
   </div>
 
   <div class="container">
     <div class="box-container">
       <div class="box-top">
-        <span>THEME</span>
+        <span class = "box-top-title--preference">THEME</span>
       </div>
       <div class="box-container--preference">
         <div class="theme-option--preference">
@@ -35,7 +35,7 @@
 
     <div class="box-container">
       <div class="box-top">
-        <span>NAME</span>
+        <span class = "box-top-title--preference">NAME</span>
         <img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" />
       </div>
       <div>
@@ -47,7 +47,7 @@
 
     <div class="box-container ">
       <div class="box-top">
-        <span>EMAIL</span>
+        <span class = "box-top-title--preference">EMAIL</span>
         <img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" />
       </div>
       <div>
@@ -59,7 +59,7 @@
 
     <div class="box-container">
       <div class="box-top">
-        <span>JOINED GROUP</span>
+        <span class = "box-top-title--preference">JOINED GROUP</span>
       </div>
       <div>
         <div class="group-box-content--preference">
@@ -67,20 +67,23 @@
             <span class="groups content--preference">BCIT CST SET B</span>
             <span class="group-option--preference">
               <span class="exit-group--preference">Exit Group</span>
-              <span><img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></span>
+              <span><a href="./group-info.html">
+			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
             </span>
           </div>
           <div class="group--preference">
             <span class="groups content--preference">BCIT CST SET C</span>
             <span class="group-option--preference">
               <span class="exit-group--preference">Exit Group</span>
-              <span><img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></span>
+              <span><a href="./group-info.html">
+			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
             </span>
           </div>
           <div class="group--preference"><span class="groups content--preference">SFU Finance Club</span>
             <span class="group-option--preference">
               <span class="exit-group--preference">Exit Group</span>
-              <span><img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></span>
+              <span><a href="./group-info.html">
+			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
             </span>
           </div>
 
