--- a/index.html
+++ b/index.html
@@ -9,28 +9,109 @@
 </head>
 
 <body>
-	<div>
-	</div>
+<div class="nav nav-index">
+    <div class="button button--menu button--menu--index">MENU</div>
+    <h1 class="title title--nav title--index">Task App</h1>
+    <a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="button setting-button-img-nav" /></a>
+  </div>
 
-	<p>App Name is a collaborative task list app you can...</p>
 
-	<div>
-		<p> Add/track list of tasks,</p>
-		<div>
-		</div>
-	</div>
-
-	<div>
-		<p>Sort and organize your tasks,</p>
-		<div>
-		</div>
-	</div>
-
-	<div>
-		<p>And join a group, share task with others!</p>
-		<div>
-		</div>
-	</div>
+  <div class="menu-panel">
+    <h1 class="title title-menu">MENU</h1>
+    <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--menu" />
+    <ul class="menu-list">
+      <li><img src="./image/search-icon.png" alt="search icon" class="icon--menu-pane">Find Group</li>
+      <li><img src="./image/plus-icon.png" alt="plus icon" class="icon--menu-pane">Create Group</li>
+      <li><img src="./image/list-icon.png" alt="list icon" class="icon--menu-pane">Your Groups</li>
+      <ul class="menu-list menu-list-deeper">
+        <li>BCIT CST SET B</li>
+        <li>BCIT CST SET C</li>
+        <li>Dos Tacos</li>
+      </ul>
+      <li><a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="icon--menu-pane">Settings</a></li>
+    </ul>
+  </div>
+  
+  <div class = "container--index">
+    <div class = "box-container">
+      <input type="text" name="searchGroup" placeholder = "Search for a group to join" class = "searching--index"/>
+    </div>
+ 
+  
+   <div class="box-container">
+      <div class="box-top">
+        <span class = "box-top-title--index">Suggested Groups</span>
+      </div>
+      <div>
+        <div class="group-box-content--index">
+          <div class="group--index">
+            <span class="groups content--index">Healthy Meal Plans!</span>
+            <span class="group-option--index">
+              <span class="exit-group--index">Join Group</span>
+              <span><a href="./group-info.html">
+			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+            </span>
+          </div>
+          <div class="group--index">
+            <span class="groups content--index">BCIT CST SET D</span>
+            <span class="group-option--index">
+              <span class="exit-group--index">Join Group</span>
+              <span><a href="./group-info.html">
+			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+            </span>
+          </div>
+          <div class="group--index"><span class="groups content--index">Dos Tacos</span>
+            <span class="group-option--index">
+              <span class="exit-group--index">Join Group</span>
+              <span><a href="./group-info.html">
+			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+	
+	<div class="box-container">
+      <div class="box-top">
+        <span class = "box-top-title--index">List of Your Group</span>
+      </div>
+      <div>
+        <div class="group-box-content--index">
+          <div class="group--index">
+            <span class="groups content--index">BCIT CST SET B</span>
+            <span class="group-option--index">
+              <span class="exit-group--index">Exit Group</span>
+              <span><a href="./group-info.html">
+			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+            </span>
+          </div>
+          <div class="group--index">
+            <span class="groups content--index">BCIT CST SET C</span>
+            <span class="group-option--index">
+              <span class="exit-group--index">Exit Group</span>
+              <span><a href="./group-info.html">
+			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+            </span>
+          </div>
+          <div class="group--index"><span class="groups content--index">SFU Finance Club</span>
+            <span class="group-option--index">
+              <span class="exit-group--index">Exit Group</span>
+              <span><a href="./group-info.html">
+			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+	
+	  <div class="box-container  create-group-button--index">+ Create Group</div>
+   </div>	
+	
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="./js/menu-pane.js"></script>
+  <script src="./js/universal.js"></script>
+</body>
 </body>
 
 </html>
